k3s/bazarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bazarr.d-kline.org`)
      kind: Rule
      middlewares:
        - name: local-only
          namespace: traefik
        - name: authelia
          namespace: traefik
        - name: security-headers
          namespace: traefik
      services:
        - name: bazarr
          port: 6767
  tls: {}
